# name-based-secure-routing

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  compose.yaml  pyproject.toml
demo-video/: README.md  architecture-demo.mmd  closing-card.html  codex-contribution.html  narration-script.md  recording-checklist.md  security-summary.html  shot-list.md  subtitles.srt  terminal-commands.txt  title-card.html
docs/: architecture.md  build-week-submission.md  demo-script.md  security-hardening-report.md  security-model.md  threat-model.md  vision-v2-conformance.md
gateway/: envoy.yaml
nbsr/: __init__.py  admission.py  config.py  control_plane.py  demo_client.py  destination_policy.py  dns_stub.py  name_control.py  name_model.py  name_relay.py  name_security.py  name_service.py  payments.py  secure_files.py  security.py  synthetic.py  ticket_verifier.py  windows_agent.py
policy/: nbsr.rego  nbsr_test.rego
scripts/: bootstrap.ps1  bootstrap.py  bootstrap.sh  demo-kind.ps1  demo-kind.sh  demo.ps1  demo.py  demo.sh  kind-down.ps1  kind-down.sh  kind-up.ps1  kind-up.sh  name-route-demo.ps1  name-route-demo.sh  test.ps1  test.sh  verify-kind-security.ps1  verify-kind-security.sh  video-demo.ps1  video-demo.sh
tests/: test_control_plane.py  test_demo.py  test_destination_policy.py  test_dns_stub.py  test_kind_security.py  test_name_relay.py  test_name_route_e2e.py  test_name_security.py  test_name_service.py  test_secure_files.py  test_security.py  test_services.py  test_synthetic.py  test_verifier.py  (+2 more)
(+17 files in other folders)
