[project]
name = "nbsr"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "cryptography>=44,<46",
  "fastapi>=0.115,<0.117",
  "httpx>=0.28,<0.29",
  "pydantic-settings>=2.7,<3",
  "PyJWT>=2.10,<3",
  "uvicorn>=0.34,<0.36",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "pytest-asyncio>=0.25,<1", "ruff>=0.9,<0.12"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 140
target-version = "py312"
